refactor: 로또 당첨 판별 결과를 List로 반환하도록 리팩토링